# MuKoe

./: .gitignore  NOTICES.txt  README.md  ruff.toml
.github/workflows/: python-lint.yml
cluster/: README.md  mukoe.yaml
cluster/k8s/: README.md  cluster.yaml
cluster/k8s/tpu-webhook/deployments/: deployment.yaml
cluster/vms/: README.md  mukoe.yaml
docker/: Dockerfile  Dockerfile.batcher  Dockerfile.batcher-base  README.md
grpc_batcher/: README.md  __init__.py  setup.py
grpc_batcher/cpp/: CMakeLists.txt
grpc_batcher/cpp/include/: grpc_batcher.h
grpc_batcher/cpp/proto/: mukoe_batcher.proto
grpc_batcher/cpp/src/: grpc_batcher.cc  grpc_batcher_binding.cc
grpc_batcher/test/: test_grpc_batcher.py
muzero/: acme_types.py  actor.py  adder.py  array_encode_decode.py  atari_env_loop.py  checkpoint_utils.py  config.py  counting.py  event_logger.py  jax_types.py  losses.py  networks.py  ops.py  optimizers.py  ray_inference.py  ray_inference_state.py  ray_learn.py  ray_main.py  ray_main_interacitve_2.py  ray_muzero_actor.py  ray_reverb.py  reverb_dataset.py  run_local_eval.py  specs.py  utils.py
muzero/env_wrapper/: __init__.py  atari_wrapper.py  base.py  fakes.py  frame_stacking.py  gym_wrapper.py  single_precision.py
muzero/mcts/: __init__.py  base.py  core.py  l2g_mcts.py  utils.py
muzero/tests/: test_ckpt_timing.py  test_event_logger.py  test_ray_inference_state.py
scripts/: attach_head_k8s.sh  build_docker.sh  build_grpc_batcher.sh  format.sh  port_forward_k8s.sh
